@@ -1,8 +1,8 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/games-util/xgamer/xgamer-0.3.0.ebuild,v 1.5 2012/08/20 15:52:18 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-util/xgamer/xgamer-0.3.0.ebuild,v 1.6 2014/08/09 23:10:57 zlogene Exp $
 
-EAPI=2
+EAPI=5
 inherit perl-module
 
 DESCRIPTION="A launcher for starting games in a second X session"
