@@ -1,12 +1,12 @@
 DEFINED_PHASES=compile configure install prepare test unpack
-DEPEND=>=dev-lang/perl-5.8 >=x11-libs/gtk+-2.16:2 >=dev-perl/gtk2-perl-1.120 >=x11-wm/openbox-3.0.0 virtual/perl-File-Spec dev-perl/File-BaseDir dev-perl/XML-Twig dev-perl/glib-perl x11-misc/numlockx media-gfx/feh virtual/perl-Module-Build || ( >=dev-lang/perl-5.16 <dev-lang/perl-5.16[-build] )
+DEPEND=>=dev-lang/perl-5.8 >=x11-libs/gtk+-2.16:2 >=dev-perl/gtk2-perl-1.120 >=x11-wm/openbox-3.0.0 virtual/perl-File-Spec dev-perl/File-BaseDir dev-perl/XML-Twig dev-perl/glib-perl x11-misc/numlockx media-gfx/feh virtual/perl-Module-Build dev-lang/perl:=[-build(-)]
 DESCRIPTION=A launcher for starting games in a second X session
-EAPI=2
+EAPI=5
 HOMEPAGE=http://code.google.com/p/xgamer/
 KEYWORDS=ppc x86
 LICENSE=GPL-3
-RDEPEND=>=dev-lang/perl-5.8 >=x11-libs/gtk+-2.16:2 >=dev-perl/gtk2-perl-1.120 >=x11-wm/openbox-3.0.0 virtual/perl-File-Spec dev-perl/File-BaseDir dev-perl/XML-Twig dev-perl/glib-perl x11-misc/numlockx media-gfx/feh || ( >=dev-lang/perl-5.16 <dev-lang/perl-5.16[-build] )
+RDEPEND=>=dev-lang/perl-5.8 >=x11-libs/gtk+-2.16:2 >=dev-perl/gtk2-perl-1.120 >=x11-wm/openbox-3.0.0 virtual/perl-File-Spec dev-perl/File-BaseDir dev-perl/XML-Twig dev-perl/glib-perl x11-misc/numlockx media-gfx/feh dev-lang/perl:=[-build(-)]
 SLOT=0
 SRC_URI=http://xgamer.googlecode.com/files/xgamer-0.3.0.tar.gz
 _eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	perl-module	a6a2d5c77bdaeba2794b167689cafb7a	toolchain-funcs	0f1760274637a138b99bb649202ea402	unpacker	f300a7ca9131b1024a79762e8edd3c52
-_md5_=cf4336cc90d0d1daeddecb123bdd0947
+_md5_=5447eebd9b0ce9f3548380da76dab055
