@@ -1,13 +1,13 @@
 DEFINED_PHASES=compile configure install postinst prepare prerm setup test unpack
-DEPEND==dev-lang/perl-5* =www-apache/libapreq2-2*[perl] >=media-libs/imlib2-1.0.6-r1 dev-perl/URI >=dev-perl/ImageInfo-1.04-r2 >=dev-perl/ImageSize-2.99-r1 dev-perl/text-template >=virtual/perl-CGI-3.08 dev-perl/Image-Imlib2 =www-servers/apache-2* || ( >=dev-lang/perl-5.16 <dev-lang/perl-5.16[-build] ) >=app-admin/webapp-config-1.50.15
+DEPEND==dev-lang/perl-5* =www-apache/libapreq2-2*[perl] >=media-libs/imlib2-1.0.6-r1 dev-perl/URI >=dev-perl/ImageInfo-1.04-r2 >=dev-perl/ImageSize-2.99-r1 dev-perl/text-template >=virtual/perl-CGI-3.08 dev-perl/Image-Imlib2 =www-servers/apache-2* dev-lang/perl:=[-build(-)] >=app-admin/webapp-config-1.50.15
 DESCRIPTION=Apache gallery for mod_perl
-EAPI=2
+EAPI=5
 HOMEPAGE=http://apachegallery.dk/
 IUSE=vhosts
 KEYWORDS=amd64 ppc x86
 LICENSE=|| ( Artistic GPL-2 )
-RDEPEND==www-servers/apache-2* || ( >=dev-lang/perl-5.16 <dev-lang/perl-5.16[-build] ) >=app-admin/webapp-config-1.50.15
+RDEPEND==www-servers/apache-2* dev-lang/perl:=[-build(-)] >=app-admin/webapp-config-1.50.15
 SLOT=0
 SRC_URI=http://apachegallery.dk/download/Apache-Gallery-1.0RC3.tar.gz
 _eclasses_=depend.apache	1a38534d3f755d1ab1d92ce120bd7dbd	eutils	06133990e861be0fe60c2b428fd025d9	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	perl-module	a6a2d5c77bdaeba2794b167689cafb7a	toolchain-funcs	0f1760274637a138b99bb649202ea402	unpacker	f300a7ca9131b1024a79762e8edd3c52	webapp	25b9b1696f5e698711f47d45c3d45e3e
-_md5_=955e65121c4396708c5d4a554f3b54c5
+_md5_=01c1db04cbab0abd0882b835958d06a9
