@@ -1,16 +1,18 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-AUX 76_apache2-gallery.conf 1442 RMD160 8f67efcebb0e340d65555088721c65a02d72b479 SHA1 2cf79d18da5824d0e74e9fa231eaea8b18f69fd4 SHA256 f6c0099476bdec5f495e7de4cbdff088ed0ce01ef8993ba657a463cdb365a7ab
-AUX postinstall-en.txt 90 RMD160 66f525195a80158ecca50bbf3628d5a9f8c53eeb SHA1 34e0b57ef25c318f8fee3a49be879193a889730a SHA256 d46f8343e97402107390a651ee3e31adfcd9034d9f88d4ae5dcc83061851dfc1
-DIST Apache-Gallery-1.0RC3.tar.gz 83891 RMD160 eeceea7a0a74ba01c02368a9d5b87f90405b4ac9 SHA1 c0590e860c4ec72f8d429cb6d0a609413d4d2a66 SHA256 9a7ab7566d811bb21dd27bc9a27cdcfb2c7a96c01727ad9a04313fc80e68e1f7
-EBUILD Apache-Gallery-1.0_rc3.ebuild 1412 RMD160 b73b9126b89705a1db4dbd24308d3a89c45b909a SHA1 431fb88663a9f8f4c269275c6686834b3c1a4e0a SHA256 933b637d08216d1baf478e95eef645e488a37c361184dd53dfb0cfeb1d4472fe
-MISC ChangeLog 6396 RMD160 03a8e9f8109c0c75d71b4e1a25eee55a1e056d5f SHA1 b8f6ea777778f9fbf7e40840ff1564dd820a4e4d SHA256 195acbb1fe1f7780e58d8e941c9592793a0d4813b534b4e1b9b31e1b3fbd110e
-MISC metadata.xml 181 RMD160 af88f163669813430b3d650fa158b5f33a6562dd SHA1 08d947d1595dafcf11a22587eb17e520c446dce5 SHA256 046edb9e5513f2ddbc639e18298360f042360e78237602d09b2b3765be173254
+AUX 76_apache2-gallery.conf 1442 SHA256 f6c0099476bdec5f495e7de4cbdff088ed0ce01ef8993ba657a463cdb365a7ab SHA512 fb9f2c7c8d3fc38501311cdc76141326fa96ff8f9a33e8b9e9efc8ee7208fcb6168981ded323cc7851ea30f1b9ff1db3541cdd1c71a4f2c99ce9cb280efc7900 WHIRLPOOL dd0d7d7c966a56040f6c61e5d2664788c171cf053ce0bf415655c91e56470036d434aa78a0574d5f4f4d12e3840a1ef81dbe5212d6513ed7d52f449ba53769af
+AUX postinstall-en.txt 90 SHA256 d46f8343e97402107390a651ee3e31adfcd9034d9f88d4ae5dcc83061851dfc1 SHA512 3cecb9f07c69b20805a64e3184e3aea8e934d7ac7e42d53884268f7614780f25be524dafb25ae0d4ce1f9b1aed1fe88dfa27d98827182888fc36eb8301be0968 WHIRLPOOL a6cf9c0169db55b59b1654c04002bffb26b8de6547975822513193f9793b13696ac5d75e1f4396837bd840aaa2a08bb6c02215643038980b812c66eee5d599b6
+DIST Apache-Gallery-1.0RC3.tar.gz 83891 SHA256 9a7ab7566d811bb21dd27bc9a27cdcfb2c7a96c01727ad9a04313fc80e68e1f7
+EBUILD Apache-Gallery-1.0_rc3.ebuild 1412 SHA256 b35f734f1e27569733eec2142f5b685a8661b07a2699a77ae6088706876e6f68 SHA512 5a3e0ff5fc81da26f19852d34d2bd7a34c032dff1482000a918e1ebc374889fa59d3b881c4d42dd5e25014d07678f8b85dbd22c3aa864b764600c6252f7e0a36 WHIRLPOOL a1736eb667543cfa0b8d09b63521cfcd6177fd1331cdb9114b1a398e76b0917eabef3b383b7ba600592d0dc1ff0d7f5dc1444850bad6f4289057b9b6e317e211
+MISC ChangeLog 6508 SHA256 1ddeab4b00a5061d5179d6e358bb88fc0e906ce70a9d9bf66cc26e2f11116821 SHA512 a78b19eed5f2db99eb3492df6b50d61bf8f7a21bd063594496c98703326b61781b709bb4f065dba434c716b1e5b6f1c7be36371873da4ef4edf30de78aa5c6e7 WHIRLPOOL 8291c5b430365413d49df1c6c46ebe5349afca8fcfab551201608f4c9d653760809a27d056d220067b48952a9ce03705a214e531e6faff90b0b09ae747a13681
+MISC metadata.xml 181 SHA256 046edb9e5513f2ddbc639e18298360f042360e78237602d09b2b3765be173254 SHA512 0813a2db8510dfe048a586659c7db99127f13afb851ec5374da1ffec91f436f03257d4182c7e079299811c0faa62d00d4154ed3a62afe487b9bf4bb5fd95a17c WHIRLPOOL 42e7c8605947d022cb7032e81c0251e2b6ddbcf76ba2af6a92f4709f133e74e685fe75918bea0cbcf0b78bab91bec0a7e778c12b2bbf569f71f8b5d10e4d0176
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEARECAAYFAk3+Gc0ACgkQuQc30/atMkAMHgCbBuq/2+xHvpq9bp0vA1zzK4YU
-EGUAniZUbXO7x5Gx+0OafC5SVqPL+m3m
-=fCN8
+iJwEAQEIAAYFAlPmqtYACgkQG9wOWsQutdamOAP9GhTmbx9XHeJR5BUzV2etgFJV
+RbS9y8MARxtf89SmmN7jUPhD45Vqlnj2AqL4gZbRXnRlsw1bEDZk7QE/KBntUu6x
+Jef1Gz5jaYWRd3adsstOx/0EXxh/QTwFdFMLNPqFsqaE6FnEKyfWiLCgo5SSboku
+bdrq/mhDHPhgTf/k3t8=
+=i2Gg
 -----END PGP SIGNATURE-----
