@@ -1,6 +1,9 @@
 # ChangeLog for www-apps/Apache-Gallery
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/Apache-Gallery/ChangeLog,v 1.35 2011/06/19 15:46:12 armin76 Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/www-apps/Apache-Gallery/ChangeLog,v 1.36 2014/08/09 23:07:13 zlogene Exp $
+
+  09 Aug 2014; Mikle Kolyada <zlogene@gentoo.org> Apache-Gallery-1.0_rc3.ebuild:
+  Bump to EAPI=5 (bug #478714)
 
   19 Jun 2011; Raúl Porcel <armin76@gentoo.org> Apache-Gallery-1.0_rc3.ebuild:
   Drop alpha/sparc keywords
@@ -175,4 +178,3 @@
   Apache-Gallery-0.6.ebuild:
   New ebuild. Original ebuild submitted in bug 11725 by Jens Hilligsoee
   <gentoo@hilli.dk>
-
