@@ -1,6 +1,9 @@
 # ChangeLog for games-util/xgamer
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-util/xgamer/ChangeLog,v 1.11 2013/02/17 21:40:50 hasufell Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-util/xgamer/ChangeLog,v 1.12 2014/08/09 23:10:57 zlogene Exp $
+
+  09 Aug 2014; Mikle Kolyada <zlogene@gentoo.org> xgamer-0.3.0.ebuild:
+  Bump to EAPI=5 (bug #478714)
 
 *xgamer-0.6.2 (17 Feb 2013)
 
